# JniTestSample

./: .gitignore
app/: build.gradle
app/src/main/java/com/xiaoyuan/jnitestsample/: JNIUtil.java  MainActivity.java
app/src/main/jni/: CMakeLists.txt  com_xiaoyuan_jnitestsample_JNIUtil.cpp
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
